src/test/ui/nll/closure-requirements/propagate-approximated-to-empty.stderr
warning: not reporting region error due to -Znll
  --> $DIR/propagate-approximated-to-empty.rs:41:9
   |
41 |         demand_y(x, y, x.get())
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error: free region `'_#6r` does not outlive free region `'_#4r`
  --> $DIR/propagate-approximated-to-empty.rs:41:21
   |
41 |         demand_y(x, y, x.get())
   |                     ^

note: External requirements
  --> $DIR/propagate-approximated-to-empty.rs:39:47
   |
39 |       establish_relationships(&cell_a, &cell_b, |_outlives, x, y| {
   |  _______________________________________________^
40 | |         // Only works if 'x: 'y:
41 | |         demand_y(x, y, x.get())
42 | |     });
   | |_____^
   |
   = note: defining type: [closure@$DIR/propagate-approximated-to-empty.rs:39:47: 42:6<i16, for<'r, 's, 't0, 't1, 't2> extern "rust-call" fn((&ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 'r(7710))) std::cell::Cell<&ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 's(7711))) &'_#1r u32>, &ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 't0(7712))) std::cell::Cell<&ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 't1(9536))) u32>, &ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 't2(9537))) std::cell::Cell<&ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 's(7711))) u32>))>]
   = note: number of external vids: 2

error[E0597]: borrowed value does not live long enough (Ast)
  --> $DIR/propagate-approximated-to-empty.rs:41:24
   |
41 |         demand_y(x, y, x.get())
   |                        ^^^^^^^ does not live long enough
   |
   = note: borrowed value must be valid for the static lifetime...
note: ...but borrowed value is only valid for the anonymous lifetime #5 defined on the body at 39:47
  --> $DIR/propagate-approximated-to-empty.rs:39:47
   |
39 |       establish_relationships(&cell_a, &cell_b, |_outlives, x, y| {
   |  _______________________________________________^
40 | |         // Only works if 'x: 'y:
41 | |         demand_y(x, y, x.get())
42 | |     });
   | |_____^

note: No external requirements
  --> $DIR/propagate-approximated-to-empty.rs:38:1
   |
38 | / fn supply<'a, 'b>(cell_a: Cell<&'a u32>, cell_b: Cell<&'b u32>) {
39 | |     establish_relationships(&cell_a, &cell_b, |_outlives, x, y| {
40 | |         // Only works if 'x: 'y:
41 | |         demand_y(x, y, x.get())
42 | |     });
43 | | }
   | |_^
   |
   = note: defining type: for<'a, 'b> fn(std::cell::Cell<&ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(1:16), 'a(90))) u32>, std::cell::Cell<&ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(1:17), 'b(92))) u32>) {supply}

error: aborting due to 2 previous errors

